[package]
name = "bounds"
version = "0.6.2"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
readme = "README.md"
repository = "https://github.com/fuchsnj/bounds"
license = "MIT/Apache-2.0"
description = """
A library to interact with bounded and unbounded ranges
"""
edition = "2018"

[dependencies]
num = "0.2.0"